--- a/AldeaApp/AldeaApp/AldeaApp.csproj
+++ b/AldeaApp/AldeaApp/AldeaApp.csproj
@@ -52,6 +52,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="EPPlus">
+      <HintPath>..\..\..\..\..\Downloads\EPPlus.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -176,6 +179,12 @@
     <Compile Include="Models\Respuesta.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>ModeloUsuarios.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagrams_Result.cs">
+      <DependentUpon>ModeloUsuarios.tt</DependentUpon>
+    </Compile>
     <Compile Include="sysdiagram.cs">
       <DependentUpon>ModeloUsuarios.tt</DependentUpon>
     </Compile>
@@ -188,6 +197,15 @@
     <Compile Include="Tb_Usuarios.cs">
       <DependentUpon>ModeloUsuarios.tt</DependentUpon>
     </Compile>
+    <Compile Include="Usp_BuscarUsuario_Result.cs">
+      <DependentUpon>ModeloUsuarios.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Usp_MostrarUsuarios_Result.cs">
+      <DependentUpon>ModeloUsuarios.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Usp_SeleccionarParametro_Result.cs">
+      <DependentUpon>ModeloUsuarios.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.js" />
@@ -196,6 +214,7 @@
     <Content Include="Content\custom.css" />
     <Content Include="Content\ImagesOwner\aldea.jpg" />
     <Content Include="Content\ImagesOwner\banner.jpeg" />
+    <Content Include="Content\ImagesOwner\if_excel_83688.png" />
     <Content Include="favicon.ico" />
     <Content Include="Content\ImagesOwner\informacion.png" />
     <Content Include="Content\images\ui-icons_444444_256x240.png" />
@@ -294,9 +313,6 @@
     <Content Include="Views\Home\Usuarios.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Home\AgregarPago.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\Home\Registro.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -315,6 +331,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\ModificarInformacion.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\ModificarmiUsuario.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
