--- a/AldeaApp/AldeaApp/AldeaApp.csproj
+++ b/AldeaApp/AldeaApp/AldeaApp.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Models\Conexion.cs" />
     <Compile Include="Models\Informacion.cs" />
     <Compile Include="Models\Pago.cs" />
+    <Compile Include="Models\PagosUsuarios.cs" />
     <Compile Include="Models\PasswordStorage.cs" />
     <Compile Include="Models\Respuesta.cs" />
     <Compile Include="Models\Respuesta2.cs" />
@@ -350,6 +351,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\ModificarmiUsuario.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\TraerComprobantes.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
